--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -10,6 +10,10 @@
   background-color: white;
 }
 
+.index-main {
+  margin-top: 150px;
+}
+
 .dark {
   color: white;
   background-color: #0f0f0f;
