added animation for nav

--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -8,10 +8,11 @@
   font-style: normal;
   color: black;
   background-color: white;
+  overflow: hidden;
 }
 
 .index-main {
-  margin-top: 150px;
+  padding-top: 150px;
 }
 
 .dark {
