--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -70,17 +70,30 @@
 }
 
 .header__wrap-list {
-  display: none;
+  display: flex;
   flex-direction: row-reverse;
-  opacity: 0;
-  background-color: white;
+  background-color: black;
   position: fixed;
+  opacity: 0;
+  transition-duration: 2s;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   padding: 30px;
+  animation-name: lift-down;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
 }
+
+.header__list--open {
+  opacity: 1;
+  animation-name: lift-up;
+  animation-duration: 1s;
+  animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
+}
+
 
 .header__list {
   display: flex;
@@ -91,12 +104,13 @@
   border-bottom: 1.5px solid black;
 }
 
+/*
+
 .header__list--anim {
   animation-name: lift-up;
   animation-duration: 0.5s;
 }
-
-
+*/
 @keyframes lift-up {
   from {
     transform: translateX(120%);
@@ -104,14 +118,17 @@
   100% {
     transform: translateX(0);
   }
-
 }
 
-.header__list--open {
-  display: flex;
-  transform: translate3d(0%);
-  opacity: 1;
+@keyframes lift-down {
+  from {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(120%);
+  }
 }
+
 
 .header__item {
   padding: 10px 0;
