changed automation, changed colors, played with events

--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,11 +1,8 @@
 .header {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   z-index: 1;
   padding: 30px 30px 20px;
+  width: 100%;
 }
 
 .header__nav {
@@ -27,7 +24,7 @@
   z-index: 1;
 }
 
-.main-nav__toggle {
+.header__toggle {
   position: relative;
   display: flex;
   justify-content: flex-end;
@@ -72,7 +69,7 @@
 .header__wrap-list {
   display: flex;
   flex-direction: row-reverse;
-  background-color: black;
+  background-color: white;
   position: fixed;
   opacity: 0;
   transition-duration: 2s;
@@ -135,8 +132,8 @@
 }
 
 .header__link {
-  font-size: 34px;
-  line-height: 50px;
+  font-size: 45px;
+  line-height: 55px;
   font-family: @font-family-secondary;
   transition-duration: 0.8s;
 }
