added modif animation

--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -8,8 +8,11 @@
   font-style: normal;
   color: black;
   background-color: white;
-  overflow: hidden;
   transition-duration: 0.8s;
+}
+
+.overwlow-hidden {
+  overflow: hidden;
 }
 
 .index-main {
