--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -3,6 +3,13 @@
   z-index: 1;
   padding: 30px 30px 20px;
   width: 100%;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.header--mod {
+  padding: 15px 30px 15px;
+  background-color: rgba(255, 255, 255, 1);
+  transition-duration: 0.8s;
 }
 
 .header__nav {
@@ -79,7 +86,7 @@
   bottom: 0;
   padding: 30px;
   animation-name: lift-down;
-  animation-duration: 3s;
+  animation-duration: 1.5s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
 }
