--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,15 +1,13 @@
 .header {
-  position: fixed;
-  z-index: 1;
   padding: 30px 30px 20px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0);
-}
 
-.header--mod {
-  padding: 15px 30px 15px;
-  background-color: rgba(255, 255, 255, 1);
-  transition-duration: 0.8s;
+  &--mod {
+    padding: 15px 30px 15px;
+    background-color: rgba(255, 255, 255, 1);
+    transition-duration: 0.8s;
+  }
 }
 
 .header__nav {
@@ -18,59 +16,66 @@
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 50px 50px auto;
   align-items: center;
+  z-index: 1;
 }
 
 .header__logo {
   font-size: 24px;
-  font-family: @font-family-secondary;
   line-height: 24px;
   font-weight: 700;
-  width: 100px;
+  font-family: @font-family-secondary;
   letter-spacing: 0.040em;
-  padding: 10px 0;
-  z-index: 1;
+  z-index: 2;
 }
 
-.header__toggle {
+.header__button {
   position: relative;
   display: flex;
   justify-content: flex-end;
-  width: 100%;
   letter-spacing: 0.040em;
-  transition-duration: 0.8s;
   color: black;
-  padding: 10px 0;
-  z-index: 1;
+  z-index: 2;
 }
 
-.dropdown-menu__button {
+.header__button-span {
   font-family: @font-family-secondary;
-  position: relative;
   display: flex;
   justify-content: flex-end;
   font-size: 24px;
-  line-height: 20px;
-  transition-duration: 0.5s;
+  line-height: 24px;
+  transition-duration: 0.6s;
+
+  &--nav {
+    transform: translateX(50%);
+    opacity: 1;
+  }
+
+  &--close {
+    transform: translateX(-200%);
+    opacity: 0;
+  }
+
+  &--nav-mod {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  &--close-mod {
+    transform: translateX(-50%);
+    opacity: 0;
+  }
 }
 
-.dropdown-menu__button--open {
-  transform: translateX(50%);
-  opacity: 1;
-}
-
-.dropdown-menu__button--close {
-  transform: translateX(-200%);
-  opacity: 0;
-}
-
-.dropdown-menu__button--open1 {
-  transform: translateX(0);
-  opacity: 1;
-}
-
-.dropdown-menu__button--close1 {
-  transform: translateX(-50%);
-  opacity: 0;
+.header__button-theme {
+  grid-column-start: 2;
+  text-align: end;
+  font-size: 24px;
+  line-height: 24px;
+  font-family: @font-family-secondary;
+  transition-duration: 0.8s;
+  color: black;
+  padding: 10px 0;
+  z-index: 2;
 }
 
 .header__wrap-list {
@@ -79,25 +84,24 @@
   background-color: white;
   position: fixed;
   opacity: 0;
-  transition-duration: 2s;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   padding: 30px;
+  z-index: 1;
   animation-name: lift-down;
-  animation-duration: 1.5s;
+  animation-duration: 0.6s;
+  transition-duration: 0.6s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
-}
 
-.header__list--open {
-  opacity: 1;
-  animation-name: lift-up;
-  animation-duration: 1s;
-  animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
+  &--open {
+    opacity: 1;
+    animation-name: lift-up;
+    animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
+  }
 }
-
 
 .header__list {
   display: flex;
@@ -105,16 +109,8 @@
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 10px;
-  border-bottom: 1.5px solid black;
 }
 
-/*
-
-.header__list--anim {
-  animation-name: lift-up;
-  animation-duration: 0.5s;
-}
-*/
 @keyframes lift-up {
   from {
     transform: translateX(120%);
@@ -133,7 +129,6 @@
   }
 }
 
-
 .header__item {
   padding: 10px 0;
 }
@@ -142,12 +137,14 @@
   font-size: 45px;
   line-height: 55px;
   font-family: @font-family-secondary;
-  transition-duration: 0.8s;
 }
 
 .intro,
 .skills {
   padding: 0 30px 30px;
+  scroll-snap-align: start;
+  display: block;
+  width: 100%;
 }
 
 .intro__title {
@@ -184,11 +181,6 @@
   margin-bottom: 15px;
 }
 
-.skills__list {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
 .skills__item {
   padding: 5px 0;
 }
@@ -198,16 +190,4 @@
   font-size: 20px;
   line-height: 32px;
   letter-spacing: 0.040em;
-}
-
-.header__button {
-  grid-column-start: 2;
-  text-align: end;
-  font-size: 24px;
-  line-height: 24px;
-  font-family: @font-family-secondary;
-  transition-duration: 0.8s;
-  color: black;
-  padding: 10px 0;
-  z-index: 1;
 }
