--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -8,15 +8,16 @@
   font-style: normal;
   color: black;
   background-color: white;
-  transition-duration: 0.8s;
+  transition-duration: 0.6s;
 }
 
 .overwlow-hidden {
   overflow: hidden;
 }
 
-.index-main {
-  padding-top: 150px;
+.index-main div {
+  display: flex;
+  flex-direction: column;
 }
 
 .dark {
@@ -26,8 +27,4 @@
 
 .dark__button {
   color: white;
-}
-
-.dark__border {
-  border-bottom: 1.5px solid white;
 }
