--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -3,11 +3,11 @@
   width: 100%;
   background-color: rgba(255, 255, 255, 0);
 
-  &--mod {
+/*  &--mod {
     padding: 15px 30px 15px;
     background-color: rgba(255, 255, 255, 1);
     transition-duration: 0.8s;
-  }
+  }*/
 }
 
 .header__nav {
@@ -80,14 +80,15 @@
 
 .header__wrap-list {
   display: flex;
+  align-items: center;
   flex-direction: row-reverse;
   background-color: white;
   position: fixed;
   opacity: 0;
   left: 0;
-  right: 0;
   top: 0;
-  bottom: 0;
+  height: 100vh;
+  width: 100%;
   padding: 30px;
   z-index: 1;
   animation-name: lift-down;
@@ -106,9 +107,8 @@
 .header__list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-end;
-  padding-bottom: 10px;
+  width: 100%;
 }
 
 @keyframes lift-up {
@@ -142,9 +142,8 @@
 .intro,
 .skills {
   padding: 0 30px 30px;
-  scroll-snap-align: start;
   display: block;
-  width: 100%;
+  min-width: 400px;
 }
 
 .intro__title {
