--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -11,14 +11,17 @@
   transition-duration: 0.6s;
 }
 
-.overwlow-hidden {
+.is-locked {
   overflow: hidden;
 }
 
 .index-main div {
+  min-width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-wrap: nowrap;
+  overflow-x: auto;
 }
+
 
 .dark {
   color: white;
