changed colors, behavior and added elements to navigation

--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -6,22 +6,13 @@
   line-height: @line-height-primary;
   font-weight: 400;
   font-style: normal;
-  color: black;
+  color: rgb(64 64 64);
   background-color: white;
-  transition-duration: 0.6s;
 }
 
 .is-locked {
   overflow: hidden;
 }
-
-.index-main div {
-  min-width: 100%;
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-}
-
 
 .dark {
   color: white;
@@ -30,4 +21,8 @@
 
 .dark__button {
   color: white;
+}
+
+.index-main {
+  padding-top: 80px;
 }
