--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,7 +1,9 @@
 .header {
-  padding: 30px 30px 20px;
+  position: fixed;
+  padding: 20px 30px 15px;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: inherit;
+  z-index: 5;
 
 /*  &--mod {
     padding: 15px 30px 15px;
@@ -14,8 +16,8 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 50px 50px auto;
-  align-items: center;
+  grid-template-rows: 30px;
+  align-items: baseline;
   z-index: 1;
 }
 
@@ -41,8 +43,8 @@
   font-family: @font-family-secondary;
   display: flex;
   justify-content: flex-end;
-  font-size: 24px;
-  line-height: 24px;
+  font-size: 20px;
+  line-height: 20px;
   transition-duration: 0.6s;
 
   &--nav {
@@ -69,25 +71,27 @@
 .header__button-theme {
   grid-column-start: 2;
   text-align: end;
-  font-size: 24px;
-  line-height: 24px;
+  align-items: flex-start;
+  font-size: 20px;
+  line-height: 20px;
   font-family: @font-family-secondary;
-  transition-duration: 0.8s;
-  color: black;
-  padding: 10px 0;
+  color: inherit;
+  //padding: 10px 0;
+  margin-bottom: 10%;
   z-index: 2;
 }
 
 .header__wrap-list {
   display: flex;
-  align-items: center;
-  flex-direction: row-reverse;
+  flex-direction: column;
+  justify-content: center;
   background-color: white;
   position: fixed;
   opacity: 0;
   left: 0;
   top: 0;
   height: 100vh;
+  min-height: 640px;
   width: 100%;
   padding: 30px;
   z-index: 1;
@@ -109,6 +113,30 @@
   flex-direction: column;
   align-items: flex-end;
   width: 100%;
+}
+
+.header__list:last-child {
+  display: flex;
+  justify-content: flex-end;
+  flex-flow: row wrap;
+  width: 100%;
+  margin-top: 10%;
+  align-items: center;
+}
+
+.header__list:last-child .header__item {
+  margin-left: 20px;
+}
+
+.header__list:last-child .header__item:first-child {
+  margin-left: 0;
+}
+
+.header__list:last-child .header__link {
+  font-size: 18px;
+  line-height: 18px;
+  font-family: @font-family-secondary;
+  color: inherit;
 }
 
 @keyframes lift-up {
@@ -134,16 +162,21 @@
 }
 
 .header__link {
-  font-size: 45px;
-  line-height: 55px;
+  font-size: 35px;
+  line-height: 45px;
   font-family: @font-family-secondary;
+}
+
+.header__link-button {
+  font-size: 18px;
+  line-height: 18px;
+  font-family: @font-family-secondary;
+  color: inherit;
 }
 
 .intro,
 .skills {
   padding: 0 30px 30px;
-  display: block;
-  min-width: 400px;
 }
 
 .intro__title {
@@ -164,6 +197,7 @@
   font-size: 20px;
   line-height: 32px;
   letter-spacing: 0.040em;
+  color: rgb(134 134 139);
 }
 
 .intro__photo {
@@ -172,9 +206,9 @@
 }
 
 .skills__title {
-  font-size: 24px;
+  font-size: 30px;
   font-family: @font-family-secondary;
-  line-height: 24px;
+  line-height: 30px;
   font-weight: 700;
   letter-spacing: 0.040em;
   margin-bottom: 15px;
@@ -189,4 +223,5 @@
   font-size: 20px;
   line-height: 32px;
   letter-spacing: 0.040em;
+  color: rgb(134 134 139);
 }
