--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,15 +1,9 @@
 .header {
   position: fixed;
-  padding: 20px 30px 15px;
+  padding: 30px 30px 30px;
   width: 100%;
   background-color: inherit;
   z-index: 5;
-
-/*  &--mod {
-    padding: 15px 30px 15px;
-    background-color: rgba(255, 255, 255, 1);
-    transition-duration: 0.8s;
-  }*/
 }
 
 .header__nav {
@@ -48,22 +42,22 @@
   transition-duration: 0.6s;
 
   &--nav {
-    transform: translateX(50%);
+    transform: translate3d(50%, 0, 0);
     opacity: 1;
   }
 
   &--close {
-    transform: translateX(-200%);
+    transform: translate3d(-200%, 0, 0);
     opacity: 0;
   }
 
   &--nav-mod {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
     opacity: 1;
   }
 
   &--close-mod {
-    transform: translateX(-50%);
+    transform: translate3d(-50%, 0, 0);
     opacity: 0;
   }
 }
@@ -76,7 +70,6 @@
   line-height: 20px;
   font-family: @font-family-secondary;
   color: inherit;
-  //padding: 10px 0;
   margin-bottom: 10%;
   z-index: 2;
 }
@@ -95,16 +88,16 @@
   width: 100%;
   padding: 30px;
   z-index: 1;
+  will-change: transform;
   animation-name: lift-down;
   animation-duration: 0.6s;
   transition-duration: 0.6s;
   animation-fill-mode: forwards;
-  animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
+  animation-timing-function: cubic-bezier(0, 0.55, 0.45, 1);
 
   &--open {
     opacity: 1;
     animation-name: lift-up;
-    animation-timing-function: cubic-bezier(0.7, 0.8, 0, 1);
   }
 }
 
@@ -113,47 +106,52 @@
   flex-direction: column;
   align-items: flex-end;
   width: 100%;
-}
 
-.header__list:last-child {
-  display: flex;
-  justify-content: flex-end;
-  flex-flow: row wrap;
-  width: 100%;
-  margin-top: 10%;
-  align-items: center;
+  &:last-child {
+    display: flex;
+    justify-content: flex-end;
+    flex-flow: row wrap;
+    width: 100%;
+    margin-top: 10%;
+    align-items: center;
+  }
 }
 
 .header__list:last-child .header__item {
   margin-left: 20px;
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  & .header__link {
+    font-size: 18px;
+    line-height: 18px;
+    font-family: @font-family-secondary;
+    color: inherit;
+  }
 }
 
-.header__list:last-child .header__item:first-child {
-  margin-left: 0;
-}
-
-.header__list:last-child .header__link {
-  font-size: 18px;
-  line-height: 18px;
-  font-family: @font-family-secondary;
-  color: inherit;
-}
 
 @keyframes lift-up {
   from {
-    transform: translateX(120%);
+    //transform: translate3d(120%, 0, 0);
+    clip-path: circle(0 at 85% 5%);
   }
-  100% {
-    transform: translateX(0);
+  to {
+    //transform: translate3d(0);
+    clip-path: circle(150% at 85% 5%);
   }
 }
 
 @keyframes lift-down {
   from {
-    transform: translateX(0);
+    //transform: translate3d(0);
+    clip-path: circle(150% at 85% 5%);
   }
-  100% {
-    transform: translateX(120%);
+  to {
+    //transform: translate3d(120%, 0, 0);
+    clip-path: circle(0% at 85% 5%);
   }
 }
 
