--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -8,6 +8,11 @@
   font-style: normal;
   color: rgb(64 64 64);
   background-color: white;
+  letter-spacing: 0.040em;
+}
+
+button {
+  font-family: inherit;
 }
 
 .is-locked {
@@ -15,12 +20,16 @@
 }
 
 .dark {
-  color: white;
+  color: rgb(235, 235, 235);
   background-color: #0f0f0f;
 }
 
 .dark__button {
-  color: white;
+  color: rgb(235, 235, 235);
+}
+
+.dark__border {
+  border-color: rgb(235, 235, 235);
 }
 
 .index-main {
