start page redesign and font download

--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -1,7 +1,7 @@
 .index-page {
   position: relative;
   min-width: 320px;
-  font-family: @font-family-secondary;
+  font-family: "oggr";
   font-size: @font-size-primary;
   line-height: @line-height-primary;
   font-weight: 400;
@@ -13,6 +13,8 @@
 
 button {
   font-family: inherit;
+  letter-spacing: .04em;
+  color: inherit;
 }
 
 .is-locked {
