--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -6,3 +6,32 @@
   src: url("../fonts/arial.woff2") format("woff2"),
     url("../fonts/arial.woff") format("woff");
 }
+
+@font-face {
+  font-family: "ogg";
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/ogg.woff") format("woff");
+}
+
+@font-face {
+  font-family: "oggr";
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/Ogg-Roman.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Untm";
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/UntitledSans-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Untr";
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/UntitledSans-Regular.woff") format("woff");
+}
+
