--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -2,7 +2,6 @@
   position: fixed;
   padding: 30px 30px 30px;
   width: 100%;
-  background-color: inherit;
   z-index: 5;
 }
 
@@ -11,7 +10,7 @@
   display: grid;
   grid-template-columns: min-content  1fr;
   grid-template-rows: 30px;
-  align-items: baseline;
+  align-items: center;
   z-index: 1;
 }
 
@@ -27,7 +26,6 @@
   position: relative;
   display: flex;
   justify-content: flex-end;
-  letter-spacing: 0.040em;
   color: black;
   z-index: 2;
 }
@@ -67,7 +65,6 @@
   font-size: 18px;
   line-height: 18px;
   letter-spacing: 0.040em;
-  color: inherit;
   z-index: 2;
 }
 
@@ -189,38 +186,42 @@
 }
 
 
-.intro,
 .skills {
-  padding: 0 30px 30px;
+  padding: 30px;
+}
+
+.intro {
+  overflow: hidden;
+
 }
 
 .intro__title {
   position: relative;
-  font-family: @font-family-secondary;
-  font-size: 50px;
-  line-height: 65px;
-  text-transform: uppercase;
+  font-family: "oggr";
+  font-size: 120px;
+  line-height: 110px;
   margin-bottom: 30px;
+  font-weight: 300;
   text-align: center;
-  border-bottom: 1.5px solid black;
   padding: 30px 0;
 }
 
 .intro__desc {
-  font-family: @font-family-secondary;
+  font-family: "Untr";
   font-size: 20px;
   line-height: 32px;
   color: rgb(134 134 139);
+  padding: 0 30px;
 }
 
 .intro__photo {
   width: 100%;
   margin-bottom: 20px;
+  padding: 0 30px;
 }
 
 .skills__title {
   font-size: 30px;
-  font-family: @font-family-secondary;
   line-height: 30px;
   font-weight: 700;
   margin-bottom: 15px;
