--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,5 +1,6 @@
 .header {
   position: fixed;
+  grid-template-columns: max-content;
   padding: 30px 30px 30px;
   width: 100%;
   z-index: 5;
@@ -21,6 +22,7 @@
   z-index: 2;
   font-family: "Untl";
   letter-spacing: -0.020em;
+  color: inherit;
 }
 
 .header__button {
@@ -158,6 +160,10 @@
     & .header__item {
       padding: 10px 0;
     }
+
+    & .header__link {
+      color: inherit;
+    }
   }
 
   &--two-list {
@@ -165,7 +171,8 @@
     justify-content: flex-end;
 
     & .header__item {
-      margin: 0 0 15px 15px;
+      position: relative;
+      padding: 0 0 15px 15px;
     }
 
     & .header__link {
@@ -183,6 +190,12 @@
   line-height: 45px;
 }
 
+.header__icon {
+  margin-left: -5px;
+  vertical-align: top;
+  fill: white;
+}
+
 .header__link-button {
   font-size: 18px;
   line-height: 18px;
@@ -197,32 +210,32 @@
 .intro {
   position: relative;
   overflow: hidden;
-  padding-bottom: 30px;
+  padding: 30px 0;
 }
 
 .intro__title {
-  font-family: "oggr";
+  font-family: "oggr", serif;
   font-size: 6rem;
-  line-height: 85px;
-  margin-bottom: 30px;
+  font-size: 8em;
+  line-height: 1;
   font-weight: 300;
   text-align: center;
-  padding: 30px 0;
+  margin-bottom: 30px;
   letter-spacing: -5.0px;
   user-select: none;
 }
 
 .intro__desc {
-  font-family: "Untr";
-  font-size: 18px;
-  line-height: 28px;
+  font-family: "Untl", sans-serif;
+  font-size: 16px;
+  line-height: 150%;
   color: rgb(134 134 139);
-  padding: 0 30px;
+  padding: 30px;
 }
 
 .intro__photo {
   width: 100%;
-  margin-bottom: 20px;
+  height: auto;
   padding: 0 30px;
 }
 
@@ -233,13 +246,18 @@
   margin-bottom: 15px;
 }
 
+.skills__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .skills__item {
   padding: 5px 0;
 }
 
 .skills__desc {
   font-family: @font-family-secondary;
-  font-size: 20px;
-  line-height: 32px;
+  font-size: 16px;
+  line-height: 150%;
   color: rgb(134 134 139);
 }
