--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -261,3 +261,25 @@
   line-height: 150%;
   color: rgb(134 134 139);
 }
+
+.background {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  backface-visibility: hidden;
+}
+
+.background__title {
+  position: absolute;
+  font-size: 80rem;
+  top: 44rem;
+  left: -9rem;
+  opacity: .4;
+  color: rgb(62 62 62);
+  font-weight: 300;
+}
+
