--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,26 +1,23 @@
 .header {
   position: fixed;
-  grid-template-columns: max-content;
   padding: 30px 30px 30px;
   width: 100%;
-  z-index: 5;
+  z-index: 3;
 }
 
 .header__nav {
   position: relative;
   display: grid;
-  grid-template-columns: min-content  1fr;
+  grid-template-columns: min-content 1fr;
   grid-template-rows: 30px;
   align-items: center;
-  z-index: 1;
 }
 
 .header__logo {
+  font-family: "Untl";
   font-size: 18px;
   line-height: 18px;
-  font-family: @font-family-secondary;
   z-index: 2;
-  font-family: "Untl";
   letter-spacing: -0.020em;
   color: inherit;
 }
@@ -28,18 +25,16 @@
 .header__button {
   position: relative;
   display: flex;
-  justify-content: flex-end;
+  justify-self: end;
   z-index: 2;
   letter-spacing: -0.020em;
 }
 
 .header__button-span {
-  display: flex;
-  justify-content: flex-end;
+  font-family: "Untl";
   font-size: 18px;
   line-height: 18px;
   transition-duration: 0.6s;
-  font-family: "Untl";
 
   &--nav {
     transform: translate3d(50%, 0, 0);
@@ -62,23 +57,13 @@
   }
 }
 
-.header__button-theme {
-  grid-column-start: 2;
-  text-align: end;
-  align-items: flex-start;
-  font-size: 18px;
-  line-height: 18px;
-  letter-spacing: -0.020em;
-  z-index: 2;
-  font-family: "Untl";
-}
-
 .header__list-main {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
   grid-row-gap: 5%;
   background-color: white;
   position: fixed;
+  justify-items: end;
   left: 0;
   top: 0;
   height: 100vh;
@@ -115,18 +100,16 @@
 
 .header__item-main {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
   animation-name: lift-down;
   animation-duration: 0.8s;
   animation-fill-mode: forwards;
 
-  &:nth-child(1) {
-    align-items: flex-end;
+  &:first-child {
+    align-self: flex-end;
   }
 
-  &:nth-child(3) {
-    align-items: flex-start;
+  &:last-child {
+    align-self: flex-start;
   }
 }
 
@@ -148,6 +131,17 @@
   to {
     transform: translate3d(120%, 0, 0);
   }
+}
+
+.header__button-theme {
+  font-family: "Untl";
+  grid-column-start: 2;
+  text-align: end;
+  align-items: flex-start;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: -0.020em;
+  z-index: 2;
 }
 
 .header__list {
@@ -176,11 +170,11 @@
     }
 
     & .header__link {
+      font-family: "Untl";
       font-size: 18px;
       line-height: 18px;
       color: inherit;
       letter-spacing: -0.020em;
-      font-family: "Untl";
     }
   }
 }
@@ -191,9 +185,9 @@
 }
 
 .header__icon {
-  margin-left: -5px;
+  margin-left: -3px;
   vertical-align: top;
-  fill: white;
+  fill: rgb(100 100 100);
 }
 
 .header__link-button {
@@ -201,7 +195,6 @@
   line-height: 18px;
   color: inherit;
 }
-
 
 .skills {
   padding: 30px;
@@ -248,7 +241,7 @@
 
 .skills__list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .skills__item {
@@ -282,4 +275,3 @@
   color: rgb(62 62 62);
   font-weight: 300;
 }
-
