--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -2,18 +2,16 @@
   position: relative;
   min-width: 320px;
   font-family: "oggr";
-  font-size: @font-size-primary;
-  line-height: @line-height-primary;
+  font-size: 14px;
+  line-height: 14px;
   font-weight: 400;
   font-style: normal;
   color: rgb(64 64 64);
   background-color: white;
-  letter-spacing: 0.040em;
 }
 
 button {
   font-family: inherit;
-  letter-spacing: .04em;
   color: inherit;
 }
 
