--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,8 +1,12 @@
 .header {
   position: fixed;
-  padding: 30px 30px 30px;
+  padding: 30px;
   width: 100%;
   z-index: 3;
+
+  @media (min-width: @desktop-width) {
+    padding: 100px;
+  }
 }
 
 .header__nav {
@@ -28,6 +32,10 @@
   justify-self: end;
   z-index: 2;
   letter-spacing: -0.020em;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
 }
 
 .header__button-span {
@@ -61,7 +69,7 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-row-gap: 5%;
-  background-color: white;
+  background-color: rgba(240, 237, 232, 0.7);
   position: fixed;
   justify-items: end;
   left: 0;
@@ -197,7 +205,7 @@
 }
 
 .skills {
-  padding: 30px;
+  padding: 30px 30px 100px;
 }
 
 .intro {
@@ -219,11 +227,19 @@
 }
 
 .intro__desc {
+  font-family: "Untm", sans-serif;
+  font-size: 24px;
+  line-height: 120%;
+  text-transform: uppercase;
+  padding: 30px 30px 20px;
+}
+
+.intro__text {
   font-family: "Untl", sans-serif;
   font-size: 16px;
   line-height: 150%;
   color: rgb(134 134 139);
-  padding: 30px;
+  padding: 10px 30px 30px;
 }
 
 .intro__photo {
@@ -250,7 +266,7 @@
 
 .skills__desc {
   font-family: @font-family-secondary;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 150%;
   color: rgb(134 134 139);
 }
@@ -268,10 +284,10 @@
 
 .background__title {
   position: absolute;
-  font-size: 80rem;
-  top: 44rem;
+  font-size: 44rem;
+  top: 45rem;
   left: -9rem;
-  opacity: .4;
+  opacity: 0.1;
   color: rgb(62 62 62);
   font-weight: 300;
 }
