--- a/source/less/blocks/index-page.less
+++ b/source/less/blocks/index-page.less
@@ -7,7 +7,7 @@
   font-weight: 400;
   font-style: normal;
   color: rgb(64 64 64);
-  background-color: white;
+  background-color: #f0ede8;
 }
 
 button {
@@ -34,6 +34,19 @@ button {
 
 .index-main {
   padding-top: 90px;
+  filter: blur(0px);
+  transition-duration: 1s;
+
+  &--filter {
+    filter: blur(10px);
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+    padding: 5%;
+  }
 }
 
 .dark__border {
