--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,5 +3,11 @@
 @import "./common.less";
 @import "./mixin.less";
 @import "./blocks/visually-hidden.less";
-@import "./blocks/header.less";
 @import "./blocks/index-page.less";
+@import "./blocks/index-main.less";
+@import "./blocks/dark__mode.less";
+@import "./blocks/background.less";
+@import "./blocks/header.less";
+@import "./blocks/intro.less";
+@import "./blocks/skills.less";
+
